# matrix-counter-clockwise

./: Makefile  README.md  pyproject.toml
matrix_loader/: cli.py  matrix_modification.py  page.py
matrix_loader/scripts/: matrix_loader.py
tests/: test_loader.py
tests/fixtures/: matrix2_before.txt  matrix3_before.txt  matrix4_before.txt
